# swift-win32

./: Package.swift  README.md
Examples/: CMakeLists.txt
Examples/TeatAppDemo/: CMakeLists.txt  Info.plist  TeatAppDemo.exe.manifest  TeatAppDemo.swift
